# rusty-api

./: .gitignore  Cargo.toml  README.md  users.db
certs/: cert.pem  key.pem
src/: api.rs  auth.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  routes.rs
src/core/: auth.rs  auth_routes.rs  config.rs  database.rs  db.rs  mod.rs  routes.rs  user.rs
src/routes/: admin_demo.rs  guest_demo.rs  mod.rs
