[package]
name = "rusty-api"
version = "0.1.7"
edition = "2021"
authors = ["Alexander Heffernan"]
description = "A secure Rust API crate for rapid development, featuring HTTPS, authentication, privilege levels, and rate limiting."
readme = "README.md"
repository = "https://github.com/AlexanderHeffernan/rusty-api"
keywords = ["api", "actix", "https", "authentication", "rate-limiting", "rustls", "cors", "security"]
categories = ["api-bindings", "network-programming", "web-programming", "asynchronous"]
license = "MIT"

[dependencies]
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-governor = "0.3.2"
actix-cors = "0.6"
rustls = "0.23"