[package]
name = "rusty-api"
version = "0.2.0"
edition = "2024"
authors = ["Alexander Heffernan"]
description = "A secure Rust API crate for rapid development, featuring HTTPS, authentication, privilege levels, and rate limiting."
readme = "README.md"
repository = "https://github.com/AlexanderHeffernan/rusty-api"
documentation = "https://docs.rs/rusty-api"
keywords = ["api", "https", "authentication", "rate-limiting", "security"]
categories = ["api-bindings", "network-programming", "web-programming", "asynchronous"]
license = "MIT"

[dependencies]
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-web-httpauth = "0.7"
actix-governor = "0.3.2"
actix-cors = "0.6"
rustls = "0.23"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
dotenv = "0.15"
bcrypt = "0.15"
chrono = "0.4"
futures-util = "0.3"
once_cell = "1.21"